--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint": "^8.35.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "net": "^1.0.2"
   }
 }
